# Kollision

./: .gitignore  CMakeLists.txt  Doxyfile
include/: ball.hpp  board.hpp  config.h  game.hpp  movingball.hpp  player.hpp  renderer.hpp  utils.hpp  vector.hpp
src/: ball.cpp  board.cpp  game.cpp  main.cpp  movingball.cpp  player.cpp  renderer.cpp
